# traid

./: .gitignore  Makefile  README.md  pyproject.toml
backtest/: bt_trump_oco.py
tests/: test_bt_trump_oco.py
tests/fixtures/: book.csv  posts.csv
