[project]
name = "traid"
version = "0.1.0"
description = "Trading research and backtesting project."
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "numpy",
    "pyarrow",
    "matplotlib",
    "pydantic",
    "pytest",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
